# Fashion-search-engine

./: .gitignore  Procfile  README.md  app.py  pyproject.toml  requirements.txt
scripts/: build_faiss_index.py  extract_sample_embedding.py  generate_embeddings.py
src/fashion_image_search/: __init__.py  config.py  data.py  embeddings.py  feature_extractor.py  search.py  utils.py
src/fashion_image_search_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
