[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-image-search-engine"
version = "0.1.0"
description = "Fashion image search engine built with PyTorch embeddings."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ayush Kumar" }
]
dependencies = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "streamlit>=1.37.0",
  "faiss-cpu>=1.8.0",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "Pillow>=10.3.0",
  "tqdm>=4.66.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fashion_image_search*"]
